fixed an issue where the tab row and the calculation contents width was not aligned at larger screens

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -35,6 +35,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   width: 100%;
+  max-width: 1000px;
   justify-items: center;
   align-items: center;
   margin-top: 40px;
@@ -116,6 +117,8 @@
   flex-direction: column;
   justify-content: start;
   align-items: center;
+  width: 100%;
+  max-width: 1000px;
   padding-bottom: 50px;
   padding-left: 30px;
   padding-right: 30px;
